# erandom

./: .gitignore  LICENSE  README.md  emojis  erandom.cabal  erandomd  erandomd.hs  readme.md
src/: Main.hs
src/Erandom/: Core.hs
