name:                erandom
version:             0.1.0.0
synopsis:            /dev/random but with emojis
description:         /dev/random but with emojis
license:             MIT
license-file:        LICENSE
author:              Ray Sohn <raymondsohn@gmail.com>
maintainer:          Ray Sohn <raymondsohn@gmail.com>
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable erandom
  main-is:             Main.hs
  build-depends:
    base                 >= 4.8  && < 4.9,
    optparse-applicative >= 0.12 && < 0.13,
    random               >= 1.1  && < 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/hachibu/erandom
