name:                  erandom
version:               0.1.0.0
synopsis:              /dev/random but with emojis
description:           Please see README.md
homepage:              https://github.com/hachibu/erandom#readme
license:               MIT
license-file:          LICENSE
author:                Ray Sohn
maintainer:            raymondsohn@gmail.com
copyright:             2016 Ray Sohn
category:              System
build-type:            Simple
cabal-version:         >= 1.10

executable erandom
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base                 >= 4.8  && < 4.9
                     , basic-prelude        >= 0.5  && < 0.6
                     , optparse-applicative >= 0.12 && < 0.13
                     , random               >= 1.1  && < 1.2
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:                git
  location:            https://github.com/hachibu/erandom
