name:                  erandom
version:               0.1.0.0
synopsis:              /dev/random but with emojis
description:           Please see README.md
homepage:              https://github.com/hachibu/erandom#readme
license:               MIT
license-file:          LICENSE
author:                hachibu
maintainer:            hachibu <raymondsohn@gmail.com>
copyright:             2018 hachibu
category:              System
build-type:            Simple
cabal-version:         >= 1.10

executable erandom
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , basic-prelude
                     , optparse-applicative
                     , random
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:                git
  location:            https://github.com/hachibu/erandom
